# iupac_formats

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  emscripten.patch  memory.patch  warnings.patch
ci/: travis_setup.sh
cmake/: CompilerFlags.cmake  SuppressWarningsInChI.cmake
inchi/: CMakeLists.txt  InChITests.cmake  valgrind.supp
inchi/INCHI_API/demos/mol2inchi/: mol2inchi.c
inchi/INCHI_API/demos/test_ixa/: test_ixa.c
inchi/INCHI_API/libinchi/: libinchi.def
inchi/INCHI_API/libinchi/ixa/: ixa_builder.c  ixa_inchikey_builder.c  ixa_mol.c  ixa_read_inchi.c  ixa_read_mol.c  ixa_status.c
inchi/INCHI_API/libinchi/src/: inchi_dll_a2.c
inchi/INCHI_BASE/: ichican2.c  ichiparm.c  ichirvr2.c  ichirvr4.c  ichitaut.c  mode.h  readinch.c  runichi.c  runichi2.c  runichi3.c  runichi4.c  util.c
inchi/INCHI_EXE/: ichimain.c
rinchi/: CMakeLists.txt
rinchi/apps/: rinchi_cmdline.cpp  rxn_from_molfiles.cpp
rinchi/lib/: inchi_api_intf.cpp  inchi_api_intf.h  inchi_generator.cpp  inchi_generator.h  rinchi_hashing.cpp  rinchi_hashing.h  rinchi_logger.cpp  rinchi_logger.h  rinchi_platform.h  rinchi_utils.cpp  rinchi_utils.h  unit_test.cpp  unit_test.h
rinchi/parsers/: generic_line_reader.h  mdl_molfile.cpp  mdl_molfile.h  mdl_molfile_reader.cpp  mdl_molfile_reader.h  mdl_rdfile.h  mdl_rdfile_reader.cpp  mdl_rdfile_reader.h  mdl_rxnfile.h  mdl_rxnfile_reader.cpp  mdl_rxnfile_reader.h  rinchi_reader.cpp  rinchi_reader.h
rinchi/rinchi/: rinchi_consts.cpp  rinchi_consts.h  rinchi_reaction.cpp  rinchi_reaction.h
rinchi/rinchi_lib/: rinchi_lib.cpp  rinchi_lib.h
rinchi/test/: CMakeLists.txt  its-std-01.txt  valgrind.supp
rinchi/test/test_suite/: rinchi_test_suite.cpp
rinchi/test/test_suite/tests/: Cambridge_data_tests.cpp  Cambridge_data_tests.h  molfile_reader_tests.cpp  molfile_reader_tests.h  rdfile_tests.cpp  rdfile_tests.h  reaction_tests.cpp  reaction_tests.h  rinchi_reader_tests.cpp  rinchi_reader_tests.h  rxnfile_tests.cpp  rxnfile_tests.h  special_atoms_tests.cpp  special_atoms_tests.h
rinchi/writers/: mdl_rdfile_writer.cpp  mdl_rdfile_writer.h  mdl_rxnfile_writer.cpp  mdl_rxnfile_writer.h
